# iSpecID

./: .gitignore  .gitmodules  63435_isid_2020-05-02-230301.collapsed  64274_isid_2020-05-03-014821.collapsed  CMakeLists.txt  README.md  annotator.cpp  annotator.h  app.cpp  benchO3.sh  cluster.sh  cxx_dist_canidae.csv  example.csv  iSpecID.pro  iSpecID.pro.user.64aef92  iSpecID.pro.user.665bb63  icons.qrc  isidVTune.sh  main.cpp  main.cxx  mainmpi.cpp  run.sh
4SpecIDApp/: graphscene.cpp  mainwindow.cpp  mainwindow.h
bench/: CMakeLists.txt  annotate.cxx
iSpecIDApp/: corrector.cxx  corrector.hpp  corrector.ui  datasetanalysisdialog.cpp  dbconnection.cpp  dbconnection.cpp.autosave  dbconnection.h  edge.cpp  edge.h  filterItem.h  filterOp.h  filterdialog.cpp  filterdialog.h  filterdialog.ui  filterform.cpp  filterform.h  filterform.ui  filterscrollarea.h  gradingoptionsdialog.cpp  gradingoptionsdialog.h  gradingoptionsdialog.ui  graphscene.cpp  graphscene.h  graphviewer.cpp  graphviewer.h  graphwidget.cxx  graphwidget.hpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  node.cpp  node.h  projectselectiondialog.cpp  projectselectiondialog.h  projectselectiondialog.ui  qannotator.cpp  qannotator.h  qrecord.h  recordmodel.cpp  (+3 more)
iSpecIDCore/: CMakeLists.txt  cluster.sh
iSpecIDCore/bench/: CMakeLists.txt  annotate.cxx  get_page.cxx  group.cxx  mine.cxx  read.cxx  regex.cpp  string_split.cxx
iSpecIDCore/include/: annotator.h  csv.hpp  datatypes.h  fileio.h  iengine.h  ispecid.h  miner.h  network.h  parser.h  reader.h  record.h  species.h  utils.h
iSpecIDCore/src/: annotator.cpp  iengine.cpp  miner.cpp  network.cpp  parser.cpp  record.cpp  utils.cpp
icons/: main_icon.icns
include/: annotator.hpp  miner.hpp  reader.hpp  record.hpp  species.hpp  utils.hpp
include/tsvreader/: TSVReader.hpp
modules/annotatev1/: CMakeLists.txt
modules/annotatev1/include/: annotatev1.hpp
modules/annotatev1/source/: annotatev1.cxx
modules/annotatev2/: CMakeLists.txt
modules/annotatev2/include/: annotatev2.hpp
modules/annotatev2/source/: annotatev2.cxx
modules/annotatev3/: CMakeLists.txt
modules/annotatev3/include/: annotatev3.hpp
modules/annotatev3/source/: annotatev3.cxx
modules/annotatev4/: CMakeLists.txt
modules/annotatev4/include/: annotatev4.hpp
modules/annotatev4/source/: annotatev4.cxx
modules/annotatev5/: CMakeLists.txt
modules/annotatev5/include/: annotatev5.hpp
modules/annotatev5/source/: annotatev5.cxx
modules/annotatev6/: CMakeLists.txt
modules/annotatev6/include/: annotatev6.hpp
modules/annotatev6/source/: annotatev6.cxx
modules/miner/: CMakeLists.txt
modules/miner/include/: miner.hpp
modules/miner/source/: miner.cxx
modules/tsvreader/: CMakeLists.txt
modules/tsvreader/include/: tsvreader.hpp
modules/utils/: CMakeLists.txt
modules/utils/include/: utils.hpp
modules/utils/source/: utils.cxx
src/: annotator.cxx  miner.cxx  record.cxx  utils.cxx
winbuild/curl-7.69.1-win64-mingw/: CHANGES.txt
winbuild/curl-7.70.0-win64-mingw/: CHANGES.txt
